# axes

./: .clang-format  .clang-tidy  .clangd  .gitattribute  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  INSTALL.md  LICENSE  NodeEditor.json  README.md  arch-env.sh  blueprint.json  build.sh  configure.sh  make_deps.ps1  make_deps.sh  pyproject.toml  render_mesh.json  requirements_cpu.txt  requirements_gpu.txt  result.npy  setup.py  vcpkg.json
axes/: CMakeLists.txt
axes-gl/: CMakeLists.txt
axes-gl/include/axes/gl/: buffer.hpp  camera.hpp  colormap.hpp  config.hpp  context.hpp  helpers.hpp  light.hpp  program.hpp  render_base.hpp  shader.hpp  utils.hpp  vao.hpp  window.hpp
axes-gl/source/: buffer.cpp  camera.cpp  colormap.cpp  context.cpp  program.cpp  shader.cpp  utils.cpp  vao.cpp  window.cpp
axes-gl/source/details/: gl_call.cpp
axes-gl/source/impl/: glm.hpp  render_line.cpp  render_line.hpp  render_mesh.cpp  render_mesh.hpp  render_point.cpp  render_point.hpp  render_quiver.cpp  render_quiver.hpp
axes-gl/source/primitives/: height_field.cpp
axes/core/: CMakeLists.txt
axes/core/include/ax/: ax_pch.hpp  ax_pch.pch
axes/core/source/components/: name.cpp
axes/core/source/core/: init.cpp  logging.cpp
axes/core/source/math/: buffer_blas.cpp  init.cpp  init_parallel.cpp  io.cpp  sparse.cpp  sparse_ext.cpp
axes/core/source/utils/: asset.cpp  meta.cpp  opt.cpp  print_exception.cpp  raw_buffer.cpp
axes/core/source/vdb/: pointcloud.cpp  poisson.cpp
axes/fdfv/: CMakeLists.txt
axes/fdfv/source/advect/: lattice.cpp
axes/fem/: CMakeLists.txt
axes/geometry/: CMakeLists.txt
axes/geometry/source/: decimate.cpp  halfedge.cpp  io.cpp  normal.cpp  primitives.cpp  topology.cpp  transforms.cpp
axes/gl/: CMakeLists.txt
axes/gl/source/: buffer.cpp  camera.cpp  colormap.cpp  context.cpp  program.cpp  shader.cpp  utils.cpp  vao.cpp  window.cpp
axes/graph/: CMakeLists.txt
axes/graph/source/: executor.cpp  graph.cpp  node.cpp  payload.cpp  render.cpp
axes/include/axes/: ax_pch.hpp
axes/optim/: CMakeLists.txt
axes/optim/source/: common.cpp  optimizer_base.cpp  spsdm.cpp  test_problems.cpp
axes/optim2/: CMakeLists.txt
axes/optim2/source/: problem.cpp
axes/shader/: mesh_pc.frag  mesh_pc.vert  point.frag  point.vert
axes/source/components/: name.cpp
axes/source/core/: init.cpp
axes/source/geometry/: decimate.cpp  halfedge.cpp  io.cpp  normal.cpp  primitives.cpp  topology.cpp  transforms.cpp
axes/source/gui/: imnodes.cpp
axes/source/math/: init.cpp  io.cpp
axes/source/optim/: common.cpp  newton.cpp  optimizer_base.cpp  test_problems.cpp
axes/source/port/: gltf.cpp
axes/source/utils/: asset.cpp  meta.cpp  opt.cpp  raw_buffer.cpp
axes/source/vdb/: pointcloud.cpp  poisson.cpp  volumetomesh.cpp
axes/test/: ecs.cpp  math.cpp
axes/xpbd/: CMakeLists.txt
binding/: CMakeLists.txt  main.cpp
binding/core/: binding.cpp  binding.hpp
binding/fem/: binding.cpp  binding.hpp
binding/gl/: binding.cpp  binding.hpp
core/: CMakeLists.txt
core/include/acore/: common.hpp  init.hpp
core/source/: init.cpp
core/source/ecs/: resourcemanager.cpp  world.cpp
core/source/utils/: io.cpp  logger.cpp
core/test/: ecs.cpp  math.cpp
examples/: CMakeLists.txt
examples/admm_sph/: main.cpp
examples/arap_parm/: main.cpp  solver.cpp  solver.hpp
examples/basic_graphics/: main.cpp
examples/beam_bend/: main.cpp
examples/bench-math/: main.cpp
examples/block_precond_tests/: main.cpp
examples/bufv_benchmark/: main.cpp
examples/burgers_godunov/: main.cpp
examples/burgers_high_order/: main.cpp
examples/cadmm/: main.cpp
examples/char_burgers/: main.cpp  plot_burgers.py
examples/csr_compress_tests/: main.cpp
examples/cu_admm/: main.cu
examples/cubic_solver/: main.cpp
examples/cubicstylization/: main.cpp  stylization.cpp  stylization.hpp
examples/cuda_intro/: main.cu
examples/decimate/: README.md  main.cpp
examples/ecs/: main.cpp
examples/empty/: main.cpp
examples/euler_fv/: main.cpp
examples/fdcdsim2d/: main.cpp
examples/fem2basic/: main.cpp
examples/fem2debug/: main.cpp
examples/fem3_experiment/: main.cpp
examples/fem3basic/: main.cpp
examples/fem3debug/: main.cpp
examples/fem3liu/: main.cpp
examples/fem3newton/: main.cpp
examples/fem3opt/: main.cpp
examples/fem_backward_euler/: main.cpp
examples/fem_benchmark/: find_basis.py  main.cpp
examples/fem_gather_tests/: main.cpp
examples/fem_implicit/: main.cpp
examples/fem_poisson/: main.cpp
examples/fem_spai/: main.cpp
examples/fem_tetra_fd/: main.cpp
examples/fem_tetra_fd2/: main.cpp
examples/fem_tetra_fd_gpu/: main.cu
examples/fem_utils/: main.cpp
examples/fluid/: main.cpp
examples/fluid_vdb/: main.cpp
examples/geodesic_only_flip/: main.cpp  solver.cpp  solver.hpp
examples/graph/: main.cpp
examples/guitutor/: main.cpp
examples/lattice_poisson2d/: main.cpp
examples/map_to_cuda/: main.cu
examples/memory/: main.cu
examples/normal/: main.cpp
examples/null/: main.cpp
examples/optim/: main.cpp  test_problems.cpp  test_problems.hpp
examples/optim_dense/: main.cpp
examples/optim_hw/: main.cpp  prob.hpp  prox_grad.hpp
examples/optimizer_benchmark/: main.cpp
examples/parallel/: main.cpp
examples/poisson2d/: main.cpp
examples/poisson3d/: main.cpp
examples/poisson_bench/: disp_data.py  find_basis.py  main.cpp
examples/rom_experimental/: main.cpp
examples/simd_test/: main.cpp
examples/springs/: main.cpp
examples/strides_cpu/: main.cpp
examples/surface_reconstruct/: main.cpp  solve_poisson.cpp  solve_poisson.hpp
examples/test_admm/: main.cpp
examples/test_cu_block_mm/: main.cu
examples/tet_cadmm/: main.cpp
examples/unconst_quad_opt/: main.cpp
test/: CMakeLists.txt
test/core/: buffer.cpp
test/fem/: elast.cpp  laplace.cpp  linear.cpp  mass.cpp  stvk.cpp
test/geometry/: measure.cpp
test/graph/: graph.cpp  payload.cpp
test/math/: accessor.cpp  block_matrix.cpp  common.cpp  highorder.cpp  lattice.cpp  linsys.cpp
test/solver/: fsai0.cpp
test/xpbd/: cmap.cpp
(+884 files in other folders)
